--- a/Main Road/ViewControllers/Welcome Screen/Base.lproj/Main.storyboard
+++ b/Main Road/ViewControllers/Welcome Screen/Base.lproj/Main.storyboard
@@ -184,7 +184,7 @@
                                         </constraints>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                                     </textField>
                                 </subviews>
                                 <constraints>
