--- a/Main Road/ViewControllers/Welcome Screen/Base.lproj/Main.storyboard
+++ b/Main Road/ViewControllers/Welcome Screen/Base.lproj/Main.storyboard
@@ -144,9 +144,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SBi-09-Aco">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SBi-09-Aco">
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3BN-kA-BO1"/>
@@ -158,7 +158,7 @@
                             <constraint firstItem="SBi-09-Aco" firstAttribute="trailing" secondItem="3BN-kA-BO1" secondAttribute="trailing" id="yOy-BM-rE8"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Records" id="SRO-X4-JYX"/>
+                    <navigationItem key="navigationItem" title="Rating" id="SRO-X4-JYX"/>
                     <connections>
                         <outlet property="recordsTableView" destination="SBi-09-Aco" id="5jN-9p-i4p"/>
                     </connections>
@@ -320,9 +320,6 @@
         <image name="ic_mainCar" width="1000" height="1000"/>
         <image name="ic_tyres" width="419.5" height="385.5"/>
         <image name="ic_yellowCar" width="444" height="939.5"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
