--- a/Main Road/ViewControllers/Welcome Screen/Base.lproj/Main.storyboard
+++ b/Main Road/ViewControllers/Welcome Screen/Base.lproj/Main.storyboard
@@ -21,13 +21,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SRS-wg-avH">
-                                <rect key="frame" x="157" y="0.0" width="100" height="896"/>
-                                <color key="backgroundColor" systemColor="systemRedColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="r0P-14-nHz"/>
-                                </constraints>
-                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_background" translatesAutoresizingMaskIntoConstraints="NO" id="YRi-bX-5ww">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1mP-ix-U7H">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="448"/>
                                 <subviews>
@@ -100,35 +96,35 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_mainCar" translatesAutoresizingMaskIntoConstraints="NO" id="pYk-ba-xzf">
-                                <rect key="frame" x="107" y="338" width="200" height="200"/>
+                                <rect key="frame" x="57" y="288" width="300" height="300"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="QB7-kJ-WFL"/>
-                                    <constraint firstAttribute="width" constant="200" id="azr-da-Jxg"/>
+                                    <constraint firstAttribute="height" constant="300" id="QB7-kJ-WFL"/>
+                                    <constraint firstAttribute="width" constant="300" id="azr-da-Jxg"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.098082549869999994" green="0.26281177999999999" blue="0.28423666949999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="BG6-6H-npq" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="02M-4S-RPj"/>
+                            <constraint firstAttribute="bottom" secondItem="YRi-bX-5ww" secondAttribute="bottom" id="5uM-Kg-aR8"/>
                             <constraint firstItem="1mP-ix-U7H" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BxX-kH-ZQY"/>
-                            <constraint firstAttribute="bottom" secondItem="SRS-wg-avH" secondAttribute="bottom" id="CZ5-bj-VFU"/>
                             <constraint firstItem="1mP-ix-U7H" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="FfX-Ks-mt3"/>
-                            <constraint firstItem="SRS-wg-avH" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="KI6-cv-7jx"/>
-                            <constraint firstItem="SRS-wg-avH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LNr-GJ-s8e"/>
+                            <constraint firstItem="YRi-bX-5ww" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="I2J-ah-gG3"/>
                             <constraint firstItem="BG6-6H-npq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QIB-tR-EtU"/>
+                            <constraint firstItem="YRi-bX-5ww" firstAttribute="top" secondItem="1mP-ix-U7H" secondAttribute="top" id="ROR-MP-2yz"/>
                             <constraint firstItem="pYk-ba-xzf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UX0-xP-YTA"/>
                             <constraint firstItem="1mP-ix-U7H" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ccC-T4-qG4"/>
                             <constraint firstItem="pYk-ba-xzf" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-10" id="dEg-ie-zbe"/>
                             <constraint firstItem="BG6-6H-npq" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.5" id="hht-Dn-GiT"/>
                             <constraint firstItem="1mP-ix-U7H" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="hlN-tj-OAL"/>
+                            <constraint firstItem="YRi-bX-5ww" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="iTQ-UE-SO5"/>
                             <constraint firstAttribute="bottom" secondItem="BG6-6H-npq" secondAttribute="bottom" id="xiF-Rp-opf"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="jIP-ag-AU0"/>
                     <connections>
                         <outlet property="carImageView" destination="pYk-ba-xzf" id="tVs-dQ-AiL"/>
-                        <outlet property="lineView" destination="SRS-wg-avH" id="Y1C-Ab-HyW"/>
                         <outlet property="recordsButton" destination="vnh-Jo-8tB" id="KqW-Et-EN4"/>
                         <outlet property="settingsButton" destination="Ppo-CB-RWS" id="mEN-tV-oOT"/>
                         <outlet property="startButton" destination="kdF-Xr-oN9" id="TVw-Mu-kMq"/>
@@ -319,6 +315,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ic_background" width="540" height="960"/>
         <image name="ic_barrier" width="490.5" height="457"/>
         <image name="ic_cone" width="296" height="378"/>
         <image name="ic_gear" width="540" height="540"/>
